--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,21 @@
 APScheduler==3.9.1.post1
+asgiref==3.5.2
 astropy==5.1.1
 cached-property==1.5.2
 certifi==2022.9.24
 charset-normalizer==2.1.1
 contourpy==1.0.6
 cycler==0.11.0
-Django==2.2.13
-django-cors-headers==2.5.2
-django-filter==2.1.0
+Django==3.2
+django-cors-headers==3.11.0
+django-filter==21.1
 django-settings-export==1.2.1
 django-shibboleth-remoteuser==0.12
-django-url-filter==0.3.12
-djangorestframework==3.9.2
+django-url-filter==0.3.15
+djangorestframework==3.14.0
 enum-compat==0.0.3
 fonttools==4.38.0
+greenlet==2.0.1
 humanize==4.4.0
 idna==3.4
 kiwisolver==1.4.4
@@ -23,7 +25,7 @@ numpy==1.23.4
 packaging==21.3
 pandas==1.5.1
 Pillow==9.3.0
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.5
 pyerfa==2.0.0.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -34,9 +36,9 @@ requests==2.28.1
 scipy==1.9.3
 six==1.16.0
 spiceypy==5.1.2
-SQLAlchemy==1.3.2
+SQLAlchemy==1.4.44
 sqlparse==0.4.3
 tzdata==2022.6
 tzlocal==4.2
 urllib3==1.26.12
-uWSGI==2.0.20
+uWSGI==2.0.21
