--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,17 +26,16 @@
     "highlight.js": "^10.0.1",
     "history": "^4.9.0",
     "i": "^0.3.6",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
+    "lodash": "4.17.21",
+    "moment": "2.29.4",
     "npm": "^6.14.5",
     "plotly.js": "^1.49.4",
-    "prop-types": "^15.7.2",
+    "prop-types": "15.8.1",
     "react": "^16.9.0",
     "react-date-range": "^1.0.3",
     "react-dom": "^16.9.0",
-    "react-images": "^1.0.0",
+    "react-images": "1.2.0-beta.7",
     "react-lazyload": "^2.6.2",
-    "react-particles-js": "^3.4.0",
     "react-plotly.js": "^2.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
