--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,14 +31,14 @@
     "npm": "^6.14.5",
     "plotly.js": "^1.49.4",
     "prop-types": "15.8.1",
-    "react": "^16.9.0",
+    "react": "^18.2.0",
     "react-date-range": "^1.0.3",
-    "react-dom": "^16.9.0",
+    "react-dom": "^18.2.0",
     "react-images": "1.2.0-beta.7",
     "react-lazyload": "^2.6.2",
     "react-plotly.js": "^2.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^5.0.1",
     "react-sizeme": "^2.6.7",
     "react-syntax-highlight": "^15.3.1",
     "react-youtube": "^7.13.0",
@@ -69,14 +69,14 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {
-    "eslint": "^6.2.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "8.28.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "prettier": "^2.0.5"
   },
   "author": "",
