--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,46 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^1.3.11",
+    "@date-io/date-fns": "2.16.0",
     "@devexpress/dx-react-core": "^2.0.3",
     "@devexpress/dx-react-grid": "^2.0.3",
     "@devexpress/dx-react-grid-material-ui": "^2.0.3",
-    "@fortawesome/fontawesome-free": "^5.10.1",
-    "@fullcalendar/core": "^4.3.1",
-    "@fullcalendar/daygrid": "^4.3.0",
-    "@fullcalendar/interaction": "^4.3.0",
-    "@fullcalendar/list": "^4.3.0",
-    "@fullcalendar/react": "^4.3.0",
+    "@fortawesome/fontawesome-free": "6.2.1",
+    "@fullcalendar/core": "5.11.3",
+    "@fullcalendar/daygrid": "5.11.3",
+    "@fullcalendar/interaction": "5.11.3",
+    "@fullcalendar/list": "5.11.3",
+    "@fullcalendar/react": "5.11.3",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^4.0.0-alpha.7",
     "@material-ui/styles": "^4.3.3",
-    "axios": "^0.21.1",
+    "axios": "1.2.0",
     "clsx": "^1.0.4",
-    "d3": "^5.16.0",
+    "d3": "7.6.1",
     "date-fns": "^2.0.0-beta.5",
-    "filesize": "^5.0.3",
-    "highlight.js": "^10.0.1",
-    "history": "^4.9.0",
+    "filesize": "10.0.5",
+    "highlight.js": "11.7.0",
+    "history": "5.3.0",
     "i": "^0.3.6",
     "lodash": "4.17.21",
     "moment": "2.29.4",
-    "npm": "^6.14.5",
-    "plotly.js": "^1.49.4",
+    "npm": "9.1.2",
+    "plotly.js": "2.16.3",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-date-range": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-images": "1.2.0-beta.7",
-    "react-lazyload": "^2.6.2",
+    "react-lazyload": "3.2.0",
     "react-plotly.js": "^2.3.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "6.4.3",
     "react-scripts": "^5.0.1",
-    "react-sizeme": "^2.6.7",
+    "react-sizeme": "3.0.2",
     "react-syntax-highlight": "^15.3.1",
-    "react-youtube": "^7.13.0",
-    "sql-formatter": "^2.3.3"
+    "react-youtube": "10.1.0",
+    "sql-formatter": "12.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
