--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "2.16.0",
-    "@devexpress/dx-react-core": "^2.0.3",
-    "@devexpress/dx-react-grid": "^2.0.3",
-    "@devexpress/dx-react-grid-material-ui": "^2.0.3",
+    "@devexpress/dx-react-core": "3.0.4",
+    "@devexpress/dx-react-grid": "3.0.4",
+    "@devexpress/dx-react-grid-material-ui": "3.0.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "6.2.1",
     "@fullcalendar/core": "5.11.3",
     "@fullcalendar/daygrid": "5.11.3",
     "@fullcalendar/interaction": "5.11.3",
     "@fullcalendar/list": "5.11.3",
     "@fullcalendar/react": "5.11.3",
-    "@material-ui/core": "^4.9.14",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^4.0.0-alpha.7",
     "@material-ui/styles": "^4.3.3",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.16",
     "axios": "1.2.0",
     "clsx": "^1.0.4",
     "d3": "7.6.1",
