--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@devexpress/dx-react-grid-material-ui": "3.0.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
     "@fortawesome/fontawesome-free": "6.2.1",
     "@fullcalendar/core": "5.11.3",
     "@fullcalendar/daygrid": "5.11.3",
@@ -21,7 +22,8 @@
     "@material-ui/pickers": "^4.0.0-alpha.7",
     "@material-ui/styles": "^4.3.3",
     "@mui/icons-material": "^5.10.16",
-    "@mui/material": "^5.10.16",
+    "@mui/lab": "^5.0.0-alpha.111",
+    "@mui/material": "^5.10.17",
     "axios": "1.2.0",
     "clsx": "^1.0.4",
     "d3": "7.6.1",
@@ -42,6 +44,7 @@
     "react-images": "1.2.0-beta.7",
     "react-lazyload": "3.2.0",
     "react-plotly.js": "^2.3.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "6.4.3",
     "react-scripts": "^5.0.1",
     "react-sizeme": "3.0.2",
