--- a/nginx-proxy-development.conf
+++ b/nginx-proxy-development.conf
@@ -23,6 +23,10 @@ server {
     proxy_read_timeout 120s;
     fastcgi_send_timeout 120s;
     fastcgi_read_timeout 120s;
+    proxy_connect_timeout 120;
+    send_timeout 120;
+    uwsgi_read_timeout 120s;
+    uwsgi_send_timeout 120s;
 
     # Frontend
     # Proxy pass to frontend development server with live relead
@@ -40,19 +44,12 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_cache_bypass $http_upgrade;
     }
-    # location / {
-    #     proxy_pass $scheme://front$request_uri;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Host $server_name;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "upgrade";        
-    # }
 
     location /api {
         include uwsgi_params;
         uwsgi_pass tnoapi;
+        uwsgi_read_timeout 120s;
+        uwsgi_send_timeout 120s;
     }
 
     # Admin
