--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "6.4.3",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.0",
     "react-sizeme": "3.0.2",
     "react-syntax-highlight": "^15.3.1",
     "react-youtube": "10.1.0",
