--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,12 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "^5.10.17",
+    "@mui/x-date-pickers": "^6.0.0",
     "axios": "1.2.0",
     "clsx": "^1.0.4",
     "d3": "7.6.1",
     "date-fns": "^2.0.0-beta.5",
+    "dayjs": "^1.11.7",
     "filesize": "10.0.5",
     "highlight.js": "11.7.0",
     "history": "5.3.0",
