--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 # NODE_PATH=./src
 REACT_APP_API=/api
-# REACT_APP_INST_LOGIN=http://gidlabdemo.linea.gov.br/Shibboleth.sso/Login
+# REACT_APP_INST_LOGIN=http://gidlabdemo.linea.org.br/Shibboleth.sso/Login
